--- a/pyda-Read-write-hw.ipynb
+++ b/pyda-Read-write-hw.ipynb
@@ -62,14 +62,7 @@
     "        \n",
     "        dict_line = json.loads(line)\n",
     "        \n",
-    "        val_key = ''\n",
-    "        val_value = ''\n",
-    "        for key, value in dict_line.items():\n",
-    "            if key == 'user_id':\n",
-    "                val_key = value\n",
-    "            if key == 'category':\n",
-    "                val_value = value\n",
-    "        purchases[val_key] = val_value\n",
+    "        purchases[dict_line['user_id']] = dict_line['category']\n",
     "        \n",
     "        i += 1\n",
     "#        if i > 5:\n",
